[package]
name = "specialize-call"
version = "0.1.1"
edition = "2021"

description = "A macro to invoke a function with type-arguments substituted according to a runtime value"
license-file = "LICENSE"
repository = "https://github.com/RGafiyatullin/specialize-call-rs.git"
documentation = "https://docs.rs/specialize-call"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
